version/0.15/_sources/api/ansys/geometry/core/_grpc/_services/v0/curves/GRPCCurvesServiceV0.rst.txt






:class:`GRPCCurvesServiceV0`
============================


.. py:class:: ansys.geometry.core._grpc._services.v0.curves.GRPCCurvesServiceV0(channel: grpc.Channel)

   Bases: :py:obj:`ansys.geometry.core._grpc._services.base.curves.GRPCCurvesService`


   
   Curves service for gRPC communication with the Geometry server.

   This class provides methods to interact with the Geometry server's
   curves service. It is specifically designed for the v0 version of the
   Geometry API.

   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!



.. py:currentmodule:: GRPCCurvesServiceV0

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_interval`
            - Get the parametric interval (start and end parameter values) of a curve.



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~revolve_edges`
            - Revolve edges around an axis to create a surface of revolution.
          * - :py:attr:`~intersect_curves`
            - Get intersection points of curves.
          * - :py:attr:`~intersect_curve_and_surface`
            - Get intersection points of a curve and surface.
          * - :py:attr:`~get`
            - Get curve object from id.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~stub`
            - 
          * - :py:attr:`~commands_stub`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.v0.curves import GRPCCurvesServiceV0


Attribute detail
----------------

.. py:attribute:: stub

.. py:attribute:: commands_stub



Method detail
-------------

.. py:method:: revolve_edges(**kwargs) -> dict

   
   Revolve edges around an axis to create a surface of revolution.
















   ..
       !! processed by numpydoc !!

.. py:method:: intersect_curves(**kwargs) -> dict

   
   Get intersection points of curves.
















   ..
       !! processed by numpydoc !!

.. py:method:: intersect_curve_and_surface(**kwargs) -> dict

   
   Get intersection points of a curve and surface.
















   ..
       !! processed by numpydoc !!

.. py:method:: get(**kwargs) -> dict

   
   Get curve object from id.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_interval(**kwargs) -> dict
   :abstractmethod:


   
   Get the parametric interval (start and end parameter values) of a curve.
















   ..
       !! processed by numpydoc !!




